# lib-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  lib-core-spec.md  pyproject.toml
.cursor/: team-instructions.mdc
src/: __init__.py
src/automation_core/: __init__.py  _internal_log.py  _setup.py  config.py  context.py  errors.py  logging_setup.py  params.py  paramspec.py
src/automation_core/notifications/: __init__.py  email_graph.py  freshservice.py
tests/: smoke.py  test_config.py  test_errors.py  test_logging_setup.py  test_notifications.py  test_params.py  test_paramspec.py  test_setup.py
