[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-core"
version = "0.1.0"
description = "Shared utilities for Inspired-Automation projects: logging, configuration, error collection, and notification dispatch."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Inspired Automation Team" }
]
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31",
    "msal>=1.28",
]

[project.urls]
Repository = "https://github.com/Inspired-Automation/lib-core"

[tool.setuptools.packages.find]
where = ["src"]