[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-core"
version = "1.5.0"
description = "Shared utilities for Inspired-Automation projects: logging, configuration, error collection, and notification dispatch."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Inspired Automation Team" }
]
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31",
    "msal>=1.28",
]

[project.urls]
Repository = "https://github.com/Inspired-Automation/lib-core"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]